2007-05-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	* ticker/Makefile.am, ticker/init.c, ticker/system.h, ticker/tasks.c:
	Test needs clock manager. Should use rtems_test_exit() instead of
	exit().

2007-05-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* minimum/Makefile.am, minimum/init.c: Switch back to using optional
	manager support. Also add use of CONFIGURE_DISABLE_NEWLIB_REENTRANCY
	to demonstrate that the newlib reentrancy support is optional.

2007-04-13	Ralf Corsépius <ralf.corsepius@rtems.org>

	* nsecs/init.c: Remove private decl of _Timespec_Subtract use the
	  version from rtems/score/timespec.h.

2007-04-05	Joel Sherrill <joel@OARcorp.com>

	* nsecs/init.c: Provide timespec manipulation routines in the
	SuperCore. Use them everywhere possible. Perhaps they should be part
	of the public API so this test and others can use them without
	peeking into the bowels.

2007-04-05	Joel Sherrill <joel@OARcorp.com>

	* loopback/init.c: Change all obsoleted CONFIGURE_TEST_NEEDS_XXX
	configuration constants to CONFIGURE_APPLICATION_NEEDS_XXX.

2007-04-02	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am, configure.ac: Convert from Classic API style TOD_Control
	as fundamental time structure to POSIX struct timespec. Add
	clock_get_uptime().
	* nsecs/.cvsignore, nsecs/Makefile.am, nsecs/init.c, nsecs/nsecs.doc,
	nsecs/nsecs.scn: New files.

2007-03-26	Joel Sherrill <joel@OARcorp.com>

	* loopback/init.c: Add CVS Id.

2007-03-26	Joel Sherrill <joel@OARcorp.com>

	PR 1230/tests
	* minimum/init.c: Minimum should not configure console driver.

2007-02-21	Joel Sherrill <joel@OARcorp.com>

	* loopback/init.c: Fix exit paths in client thread and main test
	thread.

2006-12-18	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* init.c: added stdout flushs after prompts

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>
